# knowl

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  knowl.example.yaml  pyproject.toml  status.html
.claude/: settings.json
.claude/hooks/: notify.py  prompt-logger.py
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh  setup-direnv.sh
.github/workflows/: quality.yml
docker/: Dockerfile  config.example.yaml  docker-compose.yml  entrypoint.sh  run-cycle.sh
docs/: status.html
scripts/: keepalive.sh
src/knowl/: __init__.py  _jsonutil.py  _lock.py  _proc.py  adhoc.py  claude_runner.py  cli.py  config.py  container.py  cycle.py  filters.py  gate.py  github_client.py  keepalive.py  prioritize.py  slack.py  slack_bot.py  state.py  tasks.py  usage.py
templates/: implementation.md  investigation.md
tests/: conftest.py  test_adhoc.py  test_claude_runner.py  test_cli.py  test_compose.py  test_config.py  test_container.py  test_cycle.py  test_filters.py  test_gate.py  test_github_client.py  test_jsonutil.py  test_keepalive.py  test_lock.py  test_prioritize.py  test_proc.py  test_slack.py  test_slack_bot.py  test_state.py  test_tasks.py  test_tasks_permissions.py  test_usage.py
